# KiwiTasker

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  main.c  main.cpp  oldmain.cpp  oldmain2.cpp
include/kiwi/: Array.h  Config.h  Context.h  ContextFunctions.h  ContextFunctionsLinux.h  ContextFunctionsWindows.h  Counter.h  Fiber.h  FiberPool.h  FiberWorkerStorage.h  FiberWorkerThreadMain.h  Job.h  JobPriority.h  KIWI_Array.h  KIWI_Atomics.h  KIWI_Counter.h  KIWI_CounterPool.h  KIWI_FiberPool.h  KIWI_FiberWorkerStorage.h  KIWI_Job.h  KIWI_JobPriority.h  KIWI_Queue.h  KIWI_Scheduler.h  KIWI_SpinLock.h  KIWI_Std.h  KIWI_ThreadImpl.h  KIWI_ThreadImplPthread.h  KIWI_ThreadImplWinThread.h  PendingJob.h  Queue.h  Scheduler.h  SchedulerImpl.h  SchedulerImpl_unix.h  SchedulerThreadImpl.h  SchedulerThreadImplPthreads.h  SchedulerThreadImplWinThreads.h  SpinLock.h
libs/ck_cmake/: CMakeLists.txt
src/: Counter.cpp  FiberPool.cpp  FiberWorkerStorage.cpp  FiberWorkerThreadMain.cpp  KIWI_Array.c  KIWI_Counter.c  KIWI_CounterPool.c  KIWI_FiberPool.c  KIWI_FiberWorkerStorage.c  KIWI_Queue.c  KIWI_Scheduler.c  KIWI_SpinLock.c  KIWI_ThreadImplPthread.c  KIWI_ThreadImplWinThread.c  Scheduler.cpp  SchedulerImpl.cpp  SchedulerImpl_unix.cpp  SchedulerImpl_unix.h  SchedulerThreadImplPthreads.cpp  SchedulerThreadImplWinThreads.cpp  Scheduler_internal.h  context_functions_windows.asm  get_context_unix.s  get_context_windows.s  set_context_unix.s  set_context_windows.s  swap_context_unix.s  swap_context_windows.s
